k8s/03-metrics-demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-demo
  namespace: demo-apps
  labels:
    app: metrics-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-demo
  template:
    metadata:
      labels:
        app: metrics-demo
    spec:
      containers:
        - name: metrics-demo
          image: quay.io/brancz/prometheus-example-app:v0.5.0
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-demo
  namespace: demo-apps
  labels:
    app: metrics-demo
spec:
  selector:
    app: metrics-demo
  ports:
    - name: web
      port: 8080
      targetPort: 8080
  type: ClusterIP
