k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: demo-apps
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "lab-observability-ip"
    networking.gke.io/managed-certificates: "hello-app-cert"
spec:
  rules:
    - host: hello.lab.elizaaugusta.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 80
